# GlobusM2

./: 3121_Unix.csv  CMakeLists.txt  GNUmakefile  GlobusM2.cc  init_vis.mac  run.mac  vis.mac
GDML/: Ground.gdml  Tokamak_Graphite.gdml  Tokamak_Wood.gdml  Zal_CeramicBrick.gdml  Zal_Glass.gdml  Zal_MineralSlabs.gdml  Zal_Q235.gdml  Zal_RoofingFelt.gdml  schetchik-Detector1.gdml  schetchik-Detector2.gdml  schetchik-Polietilen.gdml  schetchik-Polietilen2.gdml  schetchik-Silicon.gdml  schetchik-Silicon2.gdml  world.gdml
include/: DetectorConstruction.hh  EventAction.hh  FrequencyFunction.hh  GetCsv.hh  PrimaryGeneratorAction.hh  RunAction.hh  SensitiveDetector.hh  SteppingAction.hh
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  FrequencyFunction.cc  GetCsv.cc  PrimaryGeneratorAction.cc  RunAction.cc  SensitiveDetector.cc  SteppingAction.cc
